--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <title>Etch-N-Sketch</title>
 
 </head>
 
